--- a/index.html
+++ b/index.html
@@ -30,59 +30,49 @@
                     </li>
                 </ul>
             </nav>
-            <div class="headerimg">
-                <p class="header-text">I would like to share some information about me</p>
+            <div class="container">
+                <img id="background" src="images/purplechair.jpg" alt="Purple chair">
+                <div class="centered">I would like to share some information about me</div>
             </div>
         </header>
-        <hr>
         <main>
-            <div class="container">
-                <div id="about me">
-                    <aside><img src="images/hillsandsee.jpg"alt="Hills and See"></aside>
-                    <p>Lorem ipsum do
+            <div class="wrapper">
+                <div id="about me"><img src="images/hillsandsee.jpg"alt="Hills and See"></div>
+                <div><p>Lorem ipsum do
                nulla, id malesuada urna.Nullam tincidunt justo magna, idipiscing elit. Nunc eg
                nulla, id malesuada urna.Nullam tincidunt justo magna, id semper nequricies. </p>
                 </div>
-                <div id="work">
-                    <aside><img src="images/workhard.jpg" alt="Quote about hard work"></aside>
-                    <h2>Work</h2>
-                    <p>Nullam eu iaculis
+                <div id="work"><h2>Work</h2></div>
+                <div><img src="images/workhard.jpg" alt="Quote about hard work"></div>
+                <div><p>Nullam eu iaculis
                 nulla, id malesuada urna.orem ipsum dolor sit amet, consectis
                 nulla, id malesuada urna.orem ipsum dolor sit s
                 nulla, id malesuada urna.orem ipsum dolor sit amet, co
                 nulla, id malesuada urna.</p>
                     <button>GET More info here</button>
                 </div>
-                <div id="skills">
-                    <h3>Skills</h3>
-                    <aside><img src="images/serfingguy.jpg" alt="Serfing guy"></aside>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    <div id="skills"><h2>Skills</h2></div>
+                    <div><img src="images/serfingguy.jpg" alt="Serfing guy"></div>
+                    <div><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                 sed diam nonummy t nulla eros.Nullam eu iaculis
                 nulla, id malesuada urna.orem ipsum dolor sit au iaculis
                 nulla, id malesuadm eu iaculis
                 nulla, id malesuada urna.ou iaculis
-                nulla, id malesuada .Ne</p>
-                </div>
-                <div id="links">
-                    <h2>Links</h2>
-                    <aside><img src="images/bridge.jpg" alt="Picture of bridge"></aside>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam nonummy t nulla eros.Nullam eu iaculis
-                nulla, id malesuada urna.orem ipsum dolor sit au iaculis
-                nulla, id malesuadm eu iaculis
-                nulla, id malesuada urna.ou iaculis
-                nulla, id malesuada .Nullam eu iaculis
-                nulla, id ma iaculis
-                nulla, id malesuada urna.
-                </p>
-                </div>
+                nulla, id malesuada .Ne</p></div>
+                <div id="links"><h2>Links</h2></div> 
+                    <div><img src="images/bridge.jpg" alt="Picture of bridge"></div>
+                    <div> <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    sed diam nonummy t nulla eros.Nullam eu iaculisnulla, id malesuada urna.orem ipsum dolor sit au iaculis
+                    nulla, id malesuadm eu iaculis nulla, id malesuada urna.ou iaculis
+                    nulla, id malesuada .Nullam eu iaculis nulla, id ma iaculinulla, id malesuada urna.</p>
+                   </div>
+            </div>
                 <!-- here should be quotes in karusel -->
         </main>
-            <div id="contactme">
-                <aside><img src="images/pinkchair.jpg" alt="Pink chair"></aside>
-                <h2>Fill in the form</h2>
-                <!-- this should be in the center-->
-                <form action="https://formspree.io/ira2901@gmail.com" method="POST">
+        <section><h2>Fill in the form</h2>
+              <div class="container"><img id="contactme" src="images/pinkchair.jpg" alt="Pink chair">
+               <div class="centered">
+                   <form action="https://formspree.io/ira2901@gmail.com" method="POST">
                     <input type="text" placeholder="Name" required>
                     <br>
                     <input type="email" placeholder="E-mail" required>
@@ -90,21 +80,21 @@
                     <textarea placeholder="Write your Message" required></textarea>
                     <br>
                     <input type="submit" value="Get in touch">
-                </form>
-            </div>
+                    </form>
+                    </div>
+                </div>
+        </section>
             <!--get favicon with hand pressing the button-->
-            <footer id="contact me">
-                <h2 style="text-align:center">Contact me</h2>
-                <ul style="text-align:center">
-                    <li>+38(093)-808-49-79</li>
-                </ul>
-                <a href="https://www.facebook.com/ira.letiy" target="_blank">
+            <footer>
+                <h2>Contact me</h2>
+                <p>+38(093)-808-49-79</p>
+                <a class="social" href="https://www.facebook.com/ira.letiy" target="_blank">
                     <img src="images/facebook.png" alt="Facebook icon" class="social">
                 </a>
-                <a href="https://www.linkedin.com/in/ira-letiy-7b10b4ab/" target="_blank">
+                <a class="social" href="https://www.linkedin.com/in/ira-letiy-7b10b4ab/" target="_blank">
                     <img src="images/linkedinicon.png" alt="Linkedin icon" class="social">
                 </a>
-                <a href="mailto:ira2901@gmail.com" target="_blank">
+                <a class="social" href="mailto:ira2901@gmail.com" target="_blank">
                     <img src="images/gmailicon.png" alt="Gmail icon" class="social">
                 </a>
                 <!--add some location-->
