--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <body>
         <header>
             <nav>
-                <img class="logo" src="images/oceanwavesicon.jpg" alt="Ocean Waves Icon">
+                <p class="logo"> My personal Blog</p>
                 <ul>
                     <li>
-                        <a href="#aboutme">About</a>
+                        <a href="#edinburgh">Edinburgh</a>
                     </li>
                     <li>
-                        <a href="#work">Work</a>
+                        <a href="#london">London</a>
                     </li>
                     <li>
-                        <a href="#skills">Skills</a>
+                        <a href="#newyork">New York</a>
                     </li>
                     <li>
-                        <a href="#links">links</a>
+                        <a href="#bangkok">Bangkok</a>
                     </li>
                     <li>
                         <a href="#contactme">Contact me</a>
@@ -31,19 +31,19 @@
                 </ul>
             </nav>
             <div class="container">
-                <img id="background" src="images/purplechair.jpg" alt="Purple chair">
-                <div class="centered">I would like to share some information about me</div>
+                <img id="background" src="images/sunrayonthesee.jpg" alt="Sun rays on the see">
+                <div class="centered">I would like to share some information about my favourite cities.</div>
             </div>
         </header>
         <main>
             <div class="wrapper">
-                <div id="about me"><img src="images/hillsandsee.jpg"alt="Hills and See"></div>
+                <div id="edinburgh"><img src="images/edinburghhill.jpg"alt="Edinburgh Hill"></div>
                 <div><p>Lorem ipsum do
                nulla, id malesuada urna.Nullam tincidunt justo magna, idipiscing elit. Nunc eg
                nulla, id malesuada urna.Nullam tincidunt justo magna, id semper nequricies. </p>
                 </div>
-                <div id="work"><h2>Work</h2></div>
-                <div><img src="images/workhard.jpg" alt="Quote about hard work"></div>
+                <div id="london"><h2>London</h2></div>
+                <div><img src="images/londoncity.jpg" alt="London city"></div>
                 <div><p>Nullam eu iaculis
                 nulla, id malesuada urna.orem ipsum dolor sit amet, consectis
                 nulla, id malesuada urna.orem ipsum dolor sit s
@@ -51,16 +51,16 @@
                 nulla, id malesuada urna.</p>
                     <button>GET More info here</button>
                 </div>
-                    <div id="skills"><h2>Skills</h2></div>
-                    <div><img src="images/serfingguy.jpg" alt="Serfing guy"></div>
+                    <div id="newyork"><h2>New York</h2></div>
+                    <div><img src="images/newyorktaxi.jpg" alt="New York taxi"></div>
                     <div><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                 sed diam nonummy t nulla eros.Nullam eu iaculis
                 nulla, id malesuada urna.orem ipsum dolor sit au iaculis
                 nulla, id malesuadm eu iaculis
                 nulla, id malesuada urna.ou iaculis
                 nulla, id malesuada .Ne</p></div>
-                <div id="links"><h2>Links</h2></div> 
-                    <div><img src="images/bridge.jpg" alt="Picture of bridge"></div>
+                <div id="bangkok"><h2>Bangkok</h2></div> 
+                    <div><img src="images/bangkokwatertrip.jpg" alt="Bangkok water tree"></div>
                     <div> <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                     sed diam nonummy t nulla eros.Nullam eu iaculisnulla, id malesuada urna.orem ipsum dolor sit au iaculis
                     nulla, id malesuadm eu iaculis nulla, id malesuada urna.ou iaculis
@@ -70,7 +70,7 @@
                 <!-- here should be quotes in karusel -->
         </main>
         <section><h2>Fill in the form</h2>
-              <div class="container"><img id="contactme" src="images/pinkchair.jpg" alt="Pink chair">
+              <div class="container"><img id="contactme" src="images/pinktree.jpg" alt="Pink tree">
                <div class="centered">
                    <form action="https://formspree.io/ira2901@gmail.com" method="POST">
                     <input type="text" placeholder="Name" required>
