--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                 </nav>
                 <div class="page">
-                <div class="container" style="background-image:url(images/blacksand.jpg) background-size:cover">
+                <div class="container">
                     <div class="centered">I would like to share some information about my favourite cities.</div>
                 </div>
             </header>
@@ -145,7 +145,6 @@
                 </div>
         </div>
             </section>
-            <!--get favicon with hand pressing the button-->
             <footer>
                 <h2>Contact me</h2>
                 <p>+38(093)-808-49-79</p>
@@ -158,7 +157,6 @@
                 <a class="social" href="mailto:ira2901@gmail.com" target="_blank">
                     <img src="images/gmailicon.png" alt="Gmail icon" class="social">
                 </a>
-                <!--add some location-->
                 <br>
                 <span>Сreated on 2018</span>
             </footer>
